# ipl_lab_solutions

./: README.md
homework-00-dirgnic/: README.md  a.out  pli-hw00.cabal
homework-00-dirgnic/dist-newstyle/cache/: compiler  config
homework-00-dirgnic/src/: Main.hs
homework-01-dirgnic/: README.md  a.out  pli-hw01.cabal  stack.yaml
homework-01-dirgnic/rts/: main.c
homework-01-dirgnic/src/: Main.hs
homework-02-dirgnic/: README.md  pli-hw02.cabal
homework-02-dirgnic/app/: Main.hs
homework-02-dirgnic/src/: Hw02.hs
homework-02-dirgnic/test-data/: mini.golden  nested.golden  ten.golden  testMul.golden  testShadowing.golden
homework-02-dirgnic/tst/: Main.hs
homework-03-dirgnic/: README.md  a.out  debug.ll  generated.hex  golden.hex  pli-hw03.cabal  stack.yaml
homework-03-dirgnic/app/: Main.hs
homework-03-dirgnic/src/: CodeGeneration.hs  IntermediateRepresentation.hs  Lowering.hs  Syntax.hs  TypeChecking.hs
homework-03-dirgnic/test-data/: comparison.ll  eq.ll  mismatch.ll  not.ll  shadowing.ll  sub.ll  ten.ll
homework-03-dirgnic/tst/: Main.hs
homework-04-dirgnic/: README.md  a.out  pli-hw04.cabal
homework-04-dirgnic/app/: Main.hs
homework-04-dirgnic/src/: CodeGeneration.hs  IntermediateRepresentation.hs  Lowering.hs  Syntax.hs  TypeChecking.hs
homework-04-dirgnic/test-data/: ifthenelse  ten.golden
homework-04-dirgnic/tst/: CodeGenerationTests.hs  LoweringTests.hs  Main.hs  TypeCheckingTests.hs
homework-05-dirgnic/: README.md  pli-hw05.cabal  stack.yaml
homework-05-dirgnic/app/: Main.hs
homework-05-dirgnic/src/: CodeGeneration.hs  IntermediateRepresentation.hs  Lowering.hs  Parsing.hs  Syntax.hs  TypeChecking.hs
homework-05-dirgnic/test-data/codegen/: comparison.golden  shadowing
homework-05-dirgnic/test-data/parsing/: add_test.input  add_test.output  and_test.golden  and_test.input  complex_test.golden  complex_test.input  complex_test.output  if_test.golden  if_test.input  if_test.output  let_test.input  let_test.output  ten.golden
homework-05-dirgnic/tst/: CodeGenerationTests.hs  LoweringTests.hs  Main.hs  ParsingTests.hs  TypeCheckingTests.hs
homework-06-dirgnic/: README.md  pli-hw06.cabal
homework-06-dirgnic/app/: Main.hs
homework-06-dirgnic/rts/: main.c
homework-06-dirgnic/src/: CodeGeneration.hs  IntermediateRepresentation.hs  Lowering.hs  Parsing.hs  Syntax.hs  TypeChecking.hs
homework-06-dirgnic/test-data/codegen/: addNums  comparison  function.golden  ifthenelse.golden  ten  test_mine.golden
homework-06-dirgnic/tst/: CodeGenerationTests.hs  LoweringTests.hs  ParsingTests.hs  TypeCheckingTests.hs
homework-07-dirgnic/: README.md  pli-hw07.cabal
homework-07-dirgnic/app/: Main.hs
homework-07-dirgnic/src/: CodeGeneration.hs  IntermediateRepresentation.hs  Lowering.hs  Parsing.hs  Syntax.hs  TypeChecking.hs
homework-07-dirgnic/test-data/codegen/: comparison.golden  heap  ifthenelse  shadowing  ten.golden
homework-07-dirgnic/tst/: CodeGenerationTests.hs  LoweringTests.hs  ParsingTests.hs  TypeCheckingTests.hs
