name:                pli-hw00
version:             0.1.0.0
synopsis:            Homework 00 for PLI.

author:              Philipp Schuster
maintainer:          philipp.schuster@uni-tuebingen.de

category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable pli-hw00
  main-is:             Main.hs
  build-depends:       base ==4.18.*,
                       llvm-hs-pure ==15.0.*,
                       llvm-hs ==15.0.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
